apply changes to null hypothesis and add materials for confidence interval

--- a/Notebooks/HypothesisTesting.ipynb
+++ b/Notebooks/HypothesisTesting.ipynb
@@ -2,243 +2,222 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Null Hypothesis for Data Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What is null hypothesis and why it is important?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### It is formal methods of reaching conclusions or making decisions on the basis of data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Learning null hypotheis objective by example"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Example: A neurologist is testing the effect of a drug on response time by injecting 100 rats with a unit dose of a drug, subjecting each to neurologist stimulus and recording its response time. The neurologist knows that the mean response time for rats not injected with the drug is 1.2 seconds. The mean of the 100 injected rats's response time is 1.05 seconds with sample standard deviation of 0.5 seconds. Do you think the drug has effect on response time?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$H_o$ : Drug has no effect => $\\mu$ = 1.2 even with drug\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$H_a$ : Drug has an effect => $\\mu$ $\\neq$ 1.2 when the drug is given"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Assumption: The sample distribution is Normal. Also define, $\\mu_x$ is sample mean and $\\sigma_x$ is sample standard deviation. The $\\mu$ and $\\sigma$ are the population mean and standard deviation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Precodures to calculate z-score in order to accept or reject null hypotheis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If $H_o$ is true, then $\\mu_x$ is equal to $\\mu$ ($\\mu_x$ = $\\mu$) and $\\sigma_x$ = $\\frac{\\sigma}{\\sqrt{N}}$ $\\approx$ $\\frac{S}{\\sqrt{N}}$ "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this example if $H_o$ is true, $\\mu_x$ = 1.2 and $\\sigma_x \\approx \\frac{0.5}{10}$, where $N$ = 100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Under these assumption, the z-score is $z_{score} = \\frac{\\mu-\\mu_x}{\\sigma_x} = \\frac{1.2 - 1.05}{0.05} = 3$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Z has Normal distribution with zero mean and unit variance, p-value is the area under curve below or above z-score\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "p-value for above example is (from table or statistical module) 0.0026"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### When the p-value is very small number compared to significant level ($\\alpha$) (it is usually 0.05) then we would reject the null hypthesis with 1-0.05 = 0.95 confidence"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### If p-value < $\\alpha$, reject the null hypothesis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### If p-value > $\\alpha$, accept the null hypothesis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## How do calculate p-value from z-score?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0026997960632601866\n",
-      "0.0026997960632601866\n"
-     ]
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
-   ],
+   },
    "source": [
-    "# Task: write a code to calculate p-value from z score\n",
-    "import numpy as np\n",
-    "import scipy\n",
-    "from scipy.stats.distributions import norm\n",
+    "## What is null hypothesis?\n",
+    "\n",
+    "It is the formal methods of reaching conclusions based on population statistics and sample data where we apply changes to population"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Null hypothesis examples\n",
     "\n",
     "\n",
-    "p_value = 2*norm.cdf(-np.abs(3))\n",
+    "1- Raindance, cultures people dance together to have rain during periods of drought <img src=\"raindance.jpg\">\n",
     "\n",
-    "print(p_value)\n",
-    "print(scipy.stats.norm.sf(abs(3))*2)\n"
+    "2- We want to test a drug has impact on brain \n",
+    "\n",
+    "3- Does a food boost IQ?\n",
+    "\n",
+    "4- A/B test\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "So, the drug has definitly an effect"
+    "## Learning Objectives\n",
+    "\n",
+    "By the end of this lesson, students will be able to:\n",
+    "\n",
+    "1- Describe null hypothesis and when and how apply Null Hypothesis\n",
+    "\n",
+    "2- What are the metrics we need in order to statistically accept or reject null\n",
+    "\n",
+    "3- How and when use Z test or T test\n",
+    "\n",
+    "4- Whether or not two samples are different\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Possible errors that can happen when accept or reject null hypothesis"
+    "## Review of Z distribution, CDF and SF\n",
+    "\n",
+    "Activity: Generate 10000 sample as a random variable with Normal distribution with pre-define mean and standard deviation.\n",
+    "\n",
+    "Hint = from scipy.stats import norm \n",
+    "\n",
+    "       norm.rvs(loc= , scale= , size=10000)\n",
+    "\n",
+    "Write a code to show that $Z = \\frac{X - \\mu}{\\sigma}$, is standard Normal\n",
+    "\n",
+    "Hint: Plot histogram of Z, show Z is standard normal"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "#### Type I error : We reject the null hypothesis when the null is true"
+    "## Do the questions in worksheet\n",
+    "\n",
+    "Have 5 minutes to do it"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "$\\alpha$ = P(rejecting $H_o$  $|$  $H_o$ is true)"
+    "## Null hypothesis drug example on rat\n",
+    "\n",
+    "A neurologist is testing the effect of a drug on response time by injecting 100 rats with a unit dose of a drug, subjecting each to neurologist stimulus and recording its response time. The neurologist knows that the mean response time for rats not injected with the drug is 1.2 seconds. The mean of the 100 injected rats's response time is 1.05 seconds with population standard deviation of 0.5 seconds. Do you think the drug has effect on response time?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "#### Type II error : We accept the null hypothesis when it is not true"
+    "$H_o :$ Drug has no effect ==> $\\mu_x = 1.2$ even with drug \n",
+    "\n",
+    "$H_a :$ Drug has effect ==> $\\mu_x \\neq 1.2$ when the drug is given"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "$\\beta$ = P(accepting $H_o$ $|$ $H_o$ is false)"
+    "## The steps to reject or accept the null hypothesis\n",
+    "\n",
+    "1- The population mean is known, $\\mu$\n",
+    "\n",
+    "2- The sample mean is known, $\\bar{x}$\n",
+    "\n",
+    "3- Define a significant level, $\\alpha$\n",
+    "\n",
+    "4- If $N$ > 30, calculate z-score, $z-score = \\frac{\\bar{x} - \\mu}{\\sigma/\\sqrt{N}}$\n",
+    "\n",
+    "5- Calculate p-value, $p-value = 2SF(Z-score)$\n",
+    "\n",
+    "6- Decision: if $p-value < \\alpha$ then reject the null hypothesis "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## In class activity I"
+    "## Activity: z-test\n",
+    "\n",
+    "Write a function the takes the mean of population, significant level and the samples as the input argument \n",
+    "\n",
+    "then decide to reject ot accept the null hypothesis for drug effect on rat\n",
+    "\n",
+    "Recall: $\\mu = 1.2$, $\\bar{x} = 1.05$, $N = 100$ and $\\sigma = 0.5$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Task: write a function the takes the mean of population and the samples as the input argument \n",
-    "# then decide to reject ot accept the null hypothjessis \n",
-    "\n",
-    "def accept_or_reject_null_hypothesis(data_sample, mu, significant_level):\n",
-    "    z = (np.mean(data_sample)-mu)/(np.std(data_sample)/np.sqrt(len(data_sample)))\n",
-    "    p_value = 2*norm.cdf(-np.abs(z))\n",
+    "def accept_or_reject_null_hypothesis(mu, sample_mean, significant_level, N):\n",
+    "    # Calculate standard deviation of the sampling distribution\n",
+    "    sample_std = sigma / N\n",
+    "    \n",
+    "    # Calculate z-score from population mean (mu), sample mean and sample std\n",
+    "    z = (sample_mean - mu) / sample_std\n",
+    "    \n",
+    "    # Calculate p-value from z-score\n",
+    "    p_value = 2 * norm.cdf(-np.abs(z))\n",
+    "    \n",
+    "    # Determine whether to accept or reject null hypothesis\n",
     "    if p_value < significant_level:\n",
     "        print('reject null hypothesis')\n",
     "    else:\n",
-    "        print('accept null hypothesis')\n",
-    "            "
+    "        print('accept null hypothesis')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## In class activity II"
+    "## Break\n",
+    "\n",
+    "Lets have 10 minutes break\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "Example: The average British man is 175.3 cm tall. A survey recorded the heights of 10 UK men and we want to know whether the mean of the sample is different from the population mean."
+    "## Activity: t-test\n",
+    "\n",
+    "The average British man is 175.3 cm tall. A survey recorded the heights of 10 British men. Calculate the t-score from formula and use available function in `stats.ttest_1samp`. Compare what you will get\n",
+    "\n",
+    "`x = [177.3, 182.7, 169.6, 176.3, 180.3, 179.4, 178.5, 177.2, 181.8, 176.5]`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -250,45 +229,50 @@
     }
    ],
    "source": [
-    "# Task: should we accept or reject the above example\n",
     "from scipy import stats\n",
+    "import numpy as np\n",
     "\n",
     "x = [177.3, 182.7, 169.6, 176.3, 180.3, 179.4, 178.5, 177.2, 181.8, 176.5]\n",
     "mu = 175.3\n",
-    "x_bar = np.array(x).mean()\n",
-    "s = np.array(x).std(ddof=1) # subtract 1 from N to get unbiased estimate of sample standard deviation\n",
-    "N = len(x)\n",
-    "SE = s/np.sqrt(N)\n",
-    "t = (x_bar - mu)/SE\n",
+    "sample_mean = np.array(x).mean()\n",
+    "\n",
+    "# Calculate the standard deviation of sample distribution\n",
+    "\n",
+    "N = len(x) # number of data samples\n",
+    "SE = np.array(x).std(ddof=1) /np.sqrt(N)\n",
+    "\n",
+    "# t-test from formula\n",
+    "t = (sample_mean - mu)/SE\n",
     "print(\"t-statistic: \",t)\n",
     "\n",
-    "# a one sample t-test that gives you the p-value too can be done with scipy as follows:\n",
+    "# one sample t-test that gives you the p-value too can be done with scipy as follows:\n",
     "t, p = stats.ttest_1samp(x, mu)\n",
     "print(\"t = \", t, \", p = \", p)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "#### More precisely, when N is less than 30 or when the standard deviation of population is not known, instead of Z-statistics, we use T -statistics to test the null hypothesis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## In class activity III"
+    "## Activity: z-test or t-test\n",
+    "\n",
+    "Write a function that determine whether use z-test or t-test in order to accept or reject null hypothesis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Task write a function that determine whether use z-score or t-test in order to accept or reject null Hypothesis\n",
-    "\n",
     "def z_t_null_hypothesis(data_sample, mu, sigma, significant_level):\n",
     "    if sigma:\n",
     "        z_score = (np.mean(data_sample)-mu)/(sigma/np.sqrt(len(data_sample)))\n",
@@ -303,88 +287,76 @@
     "        print('reject null hypothesis')\n",
     "        \n",
     "    else:\n",
-    "        print('accept null hypothesis')      "
+    "        print('accept null hypothesis')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## What is one-tail or two-tail calculation for p-value?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## What is one-tail or two-tail calculation for p-value?\n",
+    "\n",
     "If the alternative hypothesis says the mean of sample is different from mean of population, we should compute p-value from two-tail. If it says the mean of sample is greater or lower than the mean of population we should compute one-tail"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Please mention other examples for hypothesis test application"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Other statistical tests we can do"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://iaingallagher.tumblr.com/post/50980987285/t-tests-in-python\n"
+    "## Possible errors that can happen when accept or reject null hypothesis\n",
+    "\n",
+    "ype I error : We reject the null hypothesis when the null is true\n",
+    "\n",
+    "$\\alpha$ = P(rejecting $H_o$  $|$  $H_o$ is true)\n",
+    "\n",
+    "Type II error : We accept the null hypothesis when it is not true\n",
+    "\n",
+    "$\\beta$ = P(accepting $H_o$ $|$ $H_o$ is false)\n",
+    "\n",
+    "The drug has effect on brain\n",
+    "\n",
+    "The drug has no effect on brain"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "#### Other Resources "
+    "## Other examples for statistical test \n",
+    "\n",
+    "Please read the Unpaired t-test part of this article\n",
+    "\n",
+    "http://iaingallagher.tumblr.com/post/50980987285/t-tests-in-python"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "https://www.kaggle.com/jgroff/unit-3-hypothesis-testing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://jukebox.esc13.net/untdeveloper/RM/Stats_Module_4/mobile_pages/Stats_Module_48.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Homework"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Homework\n",
+    "\n",
     "https://docs.google.com/document/d/1ITryiXU_VoyBvtZY4deehk4PmlieSlF7rSNc8sBU3Sw/edit"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
