--- a/Notebooks/ConfidenceIntervals.ipynb
+++ b/Notebooks/ConfidenceIntervals.ipynb
@@ -203,7 +203,7 @@
     "\n",
     "$Q_3$ is the third quartile (75%) \n",
     "\n",
-    "<img src=\"Images\\iqr.png\"> \n",
+    "<img src=\"Images/iqr.png\"> \n",
     "\n",
     "`x = [norm.rvs(loc=5 , scale=1 , size=100), -5, 11, 14]`\n"
    ]
