--- a/Notebooks/ConditionalProbability.ipynb
+++ b/Notebooks/ConditionalProbability.ipynb
@@ -28,7 +28,7 @@
     "\n",
     " <br><br>\n",
     "\n",
-    "$ P $  is the probability of the event $ A $ occuring in a set of observed events $ sample space $\n",
+    "$ P $  is the probability of the event $ A $ occurring in a set of observed events $ sample space $\n",
     "$ count of A $  - is the number of times an certain detail was present in the whole set\n",
     "$ sampleSpace $ - total number of observed events\n",
     "\n",
