--- a/Notebooks/Data_Analysis_Intro.ipynb
+++ b/Notebooks/Data_Analysis_Intro.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "- Represent the salaries in Cumulative Density Function (CDF)\n",
     "\n",
-    "<img src=\"DE_DA_DS.png\" width=\"500\" height=\"500\">\n",
+    "<img src=\"Images\DE_DA_DS.png\" width=\"500\" height=\"500\">\n",
     "\n",
     "- https://dashee87.github.io/data%20science/r/Engineering-Data-Engineers/\n",
     "\n"
