--- a/Notebooks/StatisticalAnalysis.ipynb
+++ b/Notebooks/StatisticalAnalysis.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "GMM is a probabilistic model for representing normally distributed subpopulations within an overall population\n",
     "\n",
-    "<img src=\"gmm_fig.png\" width=\"300\">\n",
+    "<img src=\"Images/gmm_fig.png\" width=\"300\">\n",
     "\n",
     "$p(x) = \\sum_{i = 1}^{K} w_i \\ \\mathcal{N}(x \\ | \\ \\mu_i,\\ \\sigma_i)$\n",
     "\n",
