--- a/Notebooks/Data_Analysis_Intro.ipynb
+++ b/Notebooks/Data_Analysis_Intro.ipynb
@@ -36,7 +36,7 @@
     "    \n",
     "    - Statistical analysis on the data. Example: the titanic dataset is given, at specific \"Embark\" what is the distibution of male passengers over all age (were they mainly young, middle age or old)\n",
     "    \n",
-    "<img src=\"DA_process.png\" width=\"600\" height=\"600\">"
+    "<img src=\"Images/DA_process.png\" width=\"600\" height=\"600\">"
    ]
   },
   {
@@ -55,7 +55,7 @@
     "    \n",
     "    - `scipy` and `statsmodels` for statistical data analysis\n",
     "    \n",
-    "<img src=\"DA_tools.png\" width=\"600\" height=\"600\">"
+    "<img src=\"Images/DA_tools.png\" width=\"600\" height=\"600\">"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "## What is Jupyter Notebook?\n",
     "\n",
-    "<img src=\"what_is_jupyter_notebook.png\" width=\"600\" height=\"600\">"
+    "<img src=\"Images/what_is_jupyter_notebook.png\" width=\"600\" height=\"600\">"
    ]
   },
   {
@@ -77,7 +77,7 @@
     "\n",
     "- Represent the salaries in Cumulative Density Function (CDF)\n",
     "\n",
-    "<img src=\"DE_DA_DS.png\" width=\"500\" height=\"500\">\n",
+    "<img src=\"Images/DE_DA_DS.png\" width=\"500\" height=\"500\">\n",
     "\n",
     "- https://dashee87.github.io/data%20science/r/Engineering-Data-Engineers/\n",
     "\n"
