--- a/Notebooks/Data_Analysis_Intro.ipynb
+++ b/Notebooks/Data_Analysis_Intro.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "- Lets watch this good video : https://www.youtube.com/watch?v=DZ7xuZ1-uh8\n",
     "\n",
-    "<img src=\"DS_process.png\" width=\"600\" height=\"600\">"
+    "<img src=\"Images/DS_process.png\" width=\"600\" height=\"600\">"
    ]
   },
   {
