--- a/Notebooks/Data_Analysis_Intro.ipynb
+++ b/Notebooks/Data_Analysis_Intro.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "- Lets watch this good video : https://www.youtube.com/watch?v=KdgQvgE3ji4&t=217s\n",
     "\n",
-    "<img src=\"DS_process.png\" width=\"600\" height=\"600\">"
+    "<img src=\"Images/DS_process.png\" width=\"600\" height=\"600\">"
    ]
   },
   {
@@ -36,7 +36,7 @@
     "    \n",
     "    - **Statistical analysis on the data**. Example: the titanic dataset is given, at specific \"Embark\" what is the distibution of male passengers over all age (were they mainly young, middle age or old)\n",
     "    \n",
-    "<img src=\"DA_process.png\" width=\"600\" height=\"600\">"
+    "<img src=\"Images/DA_process.png\" width=\"600\" height=\"600\">"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "## What is Jupyter Notebook?\n",
     "\n",
-    "<img src=\"what_is_jupyter_notebook.png\" width=\"600\" height=\"600\">"
+    "<img src=\"Images/what_is_jupyter_notebook.png\" width=\"600\" height=\"600\">"
    ]
   },
   {
@@ -77,7 +77,7 @@
     "\n",
     "We'll review [this tutorial](https://dashee87.github.io/data%20science/r/Engineering-Data-Engineers/) that shows you how to scrape the Indeed API for all junior/senior positions for Data Engineer, Data Analyst and Data Scientist.\n",
     "\n",
-    "<img src=\"DE_DA_DS.png\" width=\"500\" height=\"500\">\n",
+    "<img src=\"Images/DE_DA_DS.png\" width=\"500\" height=\"500\">\n",
     "\n",
     "Later in this course, you'll know how to follow collect, analyze, and visualize data like they do in this tutorial. You will also learn how to represent the salaries in Cumulative Density Function (CDF)\n",
     "\n"
