--- a/Notebooks/Data_Analysis_Intro.ipynb
+++ b/Notebooks/Data_Analysis_Intro.ipynb
@@ -55,7 +55,7 @@
     "    \n",
     "    - [scipy](https://www.scipy.org/) and [statsmodels](https://www.statsmodels.org/stable/index.html) for statistical data analysis\n",
     "    \n",
-    "<img src=\"DA_tools.png\" width=\"600\" height=\"600\">"
+    "<img src=\"Images/DA_tools.png\" width=\"600\" height=\"600\">"
    ]
   },
   {
